--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-kitchen",
-  "homepage": "https://soosl.github.io/react-kitchen",
+  "homepage": "https://soosl.github.io/react-kitchen/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
